Populate with initial data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     command: python hds/manage.py runserver 0.0.0.0:8010
     volumes: 
       - ./hds/:/opt/app/hds
+      - ./fixtures:/opt/app/fixtures
     ports:
       - 127.0.0.1:8010:8010
     environment:
