--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -8,6 +8,8 @@ services:
   web:
     build: .
     command: python hds/manage.py runserver 0.0.0.0:8010
+    volumes:
+      - ./fixtures:/opt/app/fixtures
     ports:
       - 127.0.0.1:8010:8010
     environment:
