use any of nuc, swemu or gpu for tests

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -1,5 +1,5 @@
 pipeline {
-    agent { label 'aft-nuc' }
+    agent { label 'aft-nuc || aft-gpu || aft-swemu' }
     
     stages {
         stage('Initialization') {
