--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
       - POSTGRES_PASSWORD=postgres
   web:
     build: .
-    command: python hds/manage.py runserver 0.0.0.0:8010
+    command: python hds/manage.py runserver 0.0.0.0:${HDS_PORT}
     volumes: 
       - ./hds/:/opt/app/hds
       - ./fixtures:/opt/app/fixtures
     ports:
-      - 127.0.0.1:8010:8010
+      - 127.0.0.1:${HDS_PORT}:${HDS_PORT}
     environment:
       - POSTGRES_NAME=postgres
       - POSTGRES_USER=postgres
