--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.5.0
 backports.zoneinfo==0.2.1
 Django==4.0.4
+django-rest-framework==0.1.0
+djangorestframework==3.13.1
 flake8==4.0.1
 gunicorn==20.1.0
 mccabe==0.6.1
 psycopg2-binary==2.9.3
 pycodestyle==2.8.0
 pyflakes==2.4.0
+pytz==2022.1
 sqlparse==0.4.2
