--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 backports.zoneinfo==0.2.1
 Django==4.0.4
 djangorestframework==3.13.1
+django-cors-headers==3.13.0
 flake8==4.0.1
 gunicorn==20.1.0
 mccabe==0.6.1
