--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - DJANGO_SUPERUSER_USERNAME=afttest
       - DJANGO_SUPERUSER_email=aft@aft.aft
       - DJANGO_SUPERUSER_PASSWORD=aft
+      - SQS_USER_PASSWORD=aft
       - SQL_ENGINE=django.db.backends.postgresql
       - SQL_HOST=db
       - SQL_PORT=5432
