purge dev-container.sh
There's really no reason for the local environment not to be as close to prod
as possible. This removes lots of headaches getting the production container built

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ./hds/:/opt/app/hds
       - ./fixtures:/opt/app/fixtures
     ports:
-      - 127.0.0.1:${HDS_PORT}:${HDS_PORT}
+      - 127.0.0.1:${HDS_PORT}:8000
     environment:
       - POSTGRES_NAME=postgres
       - POSTGRES_USER=postgres
