--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -23,7 +23,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:hds]
-command=/opt/app/scripts/dev-container.sh           ; the program (relative uses PATH, can take args)
+command=/opt/app/scripts/start-server.sh 8000  ; the program (relative uses PATH, can take args)
 user=root
 stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
 redirect_stderr=true
