--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -29,3 +29,9 @@ stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
 redirect_stderr=true
 stdout_logfile_maxbytes=0   ; max # logfile bytes b4 rotation (default 50MB)
 
+[program:report_sqs]
+command=/opt/app/scripts/start_s3_client.sh ERRORREPORTS           ; the program (relative uses PATH, can take args)
+user=root
+stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
+redirect_stderr=true
+stdout_logfile_maxbytes=0 
