--- a/prometheus.yml
+++ b/prometheus.yml
@@ -11,4 +11,4 @@ rule_files:
 scrape_configs:
 - job_name: "django"
   static_configs:
-  - targets: ["localhost:*", "127.0.0.1:*", "hds.cloud.advanced.farm",  "hds.devcloud.advanced.farm"]
+  - targets: ["localhost:${HDS_PORT}"]
