frontend docker and environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,17 @@ services:
       - db
     networks:
       - "hds-network"
+  frontend:
+    build:
+     context: ./frontend
+    command: ./entrypoint.sh
+    volumes: 
+      - ./frontend/build:/opt/app/build
+    ports:
+      - 127.0.0.1:3000:3000
+    networks:
+      - "hds-network"
+    
 networks:
   hds-network:
     driver: bridge
