production terraform for frontend service

--- a/frontend/make/prod/Makefile
+++ b/frontend/make/prod/Makefile
@@ -1,5 +1,6 @@
-AWS_PROFILE = aft-dev
-AWS_ACCOUNT_ID = 082346306812
-HDS_URL = "https://hds.cloud.advanced.farm"
+AWS_PROFILE = aft-prod
+AWS_ACCOUNT_ID = 838860823423
+HDS_URL = "https://hdsapi.cloud.advanced.farm"
+FRONTEND_URL = "https://hds.cloud.advanced.farm"
 
 include ../hds.mk
