add node env to build variables

--- a/frontend/make/dev/Makefile
+++ b/frontend/make/dev/Makefile
@@ -2,5 +2,6 @@ AWS_PROFILE = aft-dev
 AWS_ACCOUNT_ID = 082346306812
 HDS_URL = "https://hdsapi.devcloud.advanced.farm"
 FRONTEND_URL = "https://hds.devcloud.advanced.farm"
+NODE_ENV = production
 
 include ../hdsfrontend.mk
