--- a/frontend/make/prod/Makefile
+++ b/frontend/make/prod/Makefile
@@ -2,5 +2,6 @@ AWS_PROFILE = aft-prod
 AWS_ACCOUNT_ID = 838860823423
 HDS_URL = "https://hdsapi.cloud.advanced.farm"
 FRONTEND_URL = "https://hds.cloud.advanced.farm"
+NODE_ENV = "production"
 
 include ../hds.mk
