[bugfix] remove build volume and add http://

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,8 +11,8 @@ RUN npm ci
 # Args and build
 ARG HDS_PORT=8085
 ARG FRONTEND_PORT=3000
-ARG HDS_URL="localhost:${HDS_PORT}"
-ARG FRONTEND_URL="localhost:${FRONTEND_PORT}"
+ARG HDS_URL="http://localhost:${HDS_PORT}"
+ARG FRONTEND_URL="http://localhost:${FRONTEND_PORT}"
 ARG NODE_ENV="development"
 ENV REACT_APP_HDS_API_URL=${HDS_URL}
 ENV REACT_APP_HOSTED_URL=${FRONTEND_URL}
