--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "plotly.js": "^2.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-json-view": "^1.21.3",
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-plotly.js": "^2.5.1",
     "react-redux": "^8.0.2",
