--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "",
   "dependencies": {
+    "@microlink/react-json-view": "^1.22.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -14,7 +15,6 @@
     "plotly.js": "^2.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-json-view": "^1.21.3",
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-plotly.js": "^2.5.1",
     "react-redux": "^8.0.2",
