--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -35,3 +35,10 @@ user=root
 stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
 redirect_stderr=true
 stdout_logfile_maxbytes=0 
+
+[program:celery]
+command=/opt/app/scripts/start-celery.sh  ; the program (relative uses PATH, can take args)
+user=root
+stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
+redirect_stderr=true
+stdout_logfile_maxbytes=0   ; max # logfile bytes b4 rotation (default 50MB)
