--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -18,6 +18,7 @@ RUN apt update && apt install -y\
 RUN mkdir -p /opt/app/hds
 COPY requirements.txt /opt/app/
 COPY scripts/wait-for-it.sh scripts/start-server.sh scripts/start_s3_client.sh /opt/app/scripts/
+COPY scripts/start-celery.sh /opt/app/scripts/
 COPY supervisor/supervisord.local.conf /etc/supervisor/conf.d/supervisord.conf
 COPY hds /opt/app/hds/
 WORKDIR /opt/app
