Start event client script, add to supervisord

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -34,6 +34,13 @@ command=/opt/app/scripts/start_s3_client.sh ERRORREPORTS           ; the program
 user=root
 stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
 redirect_stderr=true
+stdout_logfile_maxbytes=0
+
+[program:file_sqs]
+command=/opt/app/scripts/start_event_client.sh S3FILES 9111
+user=root
+stdout_logfile=/dev/stdout      
+redirect_stderr=true
 stdout_logfile_maxbytes=0 
 
 [program:celery]
