--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==4.0.4
 django-prometheus==2.2.0
 djangorestframework==3.13.1
 django-cors-headers==3.13.0
+django-redis==5.2.0
 flake8==4.0.1
 gunicorn==20.1.0
 mccabe==0.6.1
