Add PAGE_CACHING env variable to cloud and compose

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -32,6 +32,7 @@ services:
       - SQL_PORT=5432
       - HDS_ROOT=/opt/app/hds
       - HDS_PORT=${HDS_PORT}
+      - PAGE_CACHING=true
     depends_on:
       - db
     networks:
