--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - HDS_ROOT=/opt/app/hds
       - HDS_PORT=${HDS_PORT}
       - BROKER_URL=redis://redis:6379/0
+      - PAGE_CACHING=true
     depends_on:
       - db
       - redis
