--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ COPY public/ /react/app/public/
 COPY src/ /react/app/src/
 COPY package-lock.json package.json /react/app/
 WORKDIR /react/app
-RUN npm ci
+RUN npm ci --omit=dev --ignore-scripts
 
 # Args and build
 ARG HDS_PORT=8085
