--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -2,27 +2,32 @@
 
 # dependencies
 /node_modules
+node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-.pytest_cache/
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
 
 # production
 /build
+/dist
+
+# development
+.git
+.gitignore
+.husky
+.prettierrc.json
+.prettierignore
+
+Dockerfile
+README.md
+make/
+build.start.sh
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -31,3 +36,6 @@ coverage.xml
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Backup files
+*.bak
