--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==4.0.4
 django-prometheus==2.2.0
 djangorestframework==3.13.1
 django-cors-headers==3.13.0
+django-filter==22.1 
 django-redis==5.2.0
 django-simple-history==3.1.1
 django-taggit==3.0.0
