added fruit serializer & updated fixtures

--- a/fixtures/harvestercoderelease.json
+++ b/fixtures/harvestercoderelease.json
@@ -7,7 +7,7 @@
         "modifiedBy": null,
         "created": "2022-09-21T15:33:52.778Z",
         "lastModified": "2022-09-21T15:33:52.778Z",
-        "version": "1.0",
+        "version": "20220922.163848",
         "release": {
             "master": {
                 "package": "version"
