--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-simple-history==3.1.1
 django-taggit==3.0.0
 flake8==4.0.1
 gunicorn==20.1.0
+jsonschema==4.16.0
 mccabe==0.6.1
 prometheus-client==0.14.1
 psutil==5.9.1
