--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,10 @@
   "dependencies": {
     "@microlink/react-json-view": "^1.22.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "@rjsf/core": "^5.0.0-beta.11",
+    "@rjsf/mui": "^5.0.0-beta.11",
+    "@rjsf/utils": "^5.0.0-beta.11",
+    "@rjsf/validator-ajv8": "^5.0.0-beta.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
