Store git hash in server environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - JOB_SERVER_ADDRESS=${JOB_SERVER_ADDRESS}
       - BROKER_URL=redis://redis:6379/0
       - PAGE_CACHING=true
+      - GITHASH=${GITHASH:-"UNKNOWN"}
     depends_on:
       - db
       - redis
