--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -15,7 +15,7 @@ RUN apt update && apt install -y\
     && rm -rf /var/lib/apt/lists/*
 
 # copy source and install dependencies
-RUN mkdir -p /opt/app/hds
+RUN mkdir -p /opt/app/hds/
 COPY requirements.txt /opt/app/
 COPY scripts/wait-for-it.sh scripts/start-server.sh scripts/start_s3_client.sh /opt/app/scripts/
 COPY scripts/start-celery.sh /opt/app/scripts/
@@ -23,8 +23,7 @@ COPY supervisor/supervisord.local.conf /etc/supervisor/conf.d/supervisord.conf
 COPY hds /opt/app/hds/
 WORKDIR /opt/app
 RUN pip install -r requirements.txt --no-cache-dir
-RUN chown -R www-data:www-data /opt/app
+RUN chown -R www-data:www-data /opt/app/ && chmod -R 755 /opt/app/
 RUN mkdir -p /var/log/supervisor
-RUN python hds/manage.py collectstatic --no-input
 
 CMD ["supervisord"]
