[bugfix] migrate database when building locally
I forgot that the local builds need to have the MIGRATE flag set to true.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -33,6 +33,7 @@ services:
       - HDS_ROOT=/opt/app/hds
       - HDS_PORT=${HDS_PORT}
       - PAGE_CACHING=true
+      - MIGRATE=true
     depends_on:
       - db
     networks:
