AWS resources and autodiag sqs client

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -64,6 +64,13 @@ stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
 redirect_stderr=true
 stdout_logfile_maxbytes=0
 
+[program:autodiagnostics_sqs]
+command=/opt/app/scripts/start_s3_client.sh AUTODIAGNOSTICS 9109           ; the program (relative uses PATH, can take args)
+user=root
+stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
+redirect_stderr=true
+stdout_logfile_maxbytes=0
+
 [program:celery]
 command=/opt/app/scripts/start-celery.sh  ; the program (relative uses PATH, can take args)
 user=root
