--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.1.7-beta.1",
+    "react-player": "^2.11.0",
     "react-plotly.js": "^2.5.1",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
@@ -29,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-toastify": "^9.0.7",
+    "react-virtuoso": "^3.1.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
