--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "@rjsf/validator-ajv8": "^5.0.0-beta.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.0.0",
     "@uiw/react-textarea-code-editor": "^2.0.3",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
@@ -43,12 +43,6 @@
     "format": "npx prettier --write .",
     "prepare": "cd .. && husky install frontend/.husky"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -62,7 +56,10 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.1",
+    "msw": "^0.49.2",
     "prettier": "2.7.1"
   }
 }
