Install django-celery-beat

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ psutil==5.9.1
 pyyaml==6.0.0
 uritemplate==4.1.1
 celery==5.2.7
+django-celery-beat==2.4.0
 django-celery-results==2.4.0
 redis==4.3.4
 slack_sdk==3.18.1
