--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "homepage": "",
   "dependencies": {
     "@microlink/react-json-view": "^1.22.2",
+    "@monaco-editor/react": "^4.4.6",
     "@reduxjs/toolkit": "^1.8.3",
     "@rjsf/core": "^5.0.0-beta.11",
     "@rjsf/mui": "^5.0.0-beta.11",
