--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -5,9 +5,11 @@ FROM python:3.8-slim-bullseye
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+RUN mkdir -p /var/log/supervisor
 RUN mkdir -p /opt/app/hds/
+WORKDIR /opt/app
 
-# Install dependencies
+# Install debian packages
 RUN apt update && apt install -y\
     libpq-dev\
     python-dev\
@@ -16,15 +18,15 @@ RUN apt update && apt install -y\
     virtualenv\
     && rm -rf /var/lib/apt/lists/*
 
-# copy source and install dependencies
+# Install pip packages
 COPY requirements.txt /opt/app/
-COPY scripts/wait-for-it.sh scripts/start-server.sh scripts/start_s3_client.sh /opt/app/scripts/
-COPY scripts/start-celery.sh /opt/app/scripts/
-COPY supervisor/supervisord.local.conf /etc/supervisor/conf.d/supervisord.conf
-COPY hds /opt/app/hds/
-WORKDIR /opt/app
 RUN pip install -r requirements.txt --no-cache-dir
-RUN chown -R www-data:www-data /opt/app/ && chmod -R 755 /opt/app/
-RUN mkdir -p /var/log/supervisor
+
+# Copy source, scripts and configs
+COPY scripts/ /opt/app/scripts/
+COPY supervisor/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY hds /opt/app/hds/
+
+RUN chown -R www-data:www-data /opt/app
 
 CMD ["supervisord"]
