--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,10 @@
 FROM node:16.16.0-slim as buildStage
 
 # Copy and package installation
-RUN mkdir -p /react/app/
+WORKDIR /react/app
 COPY public/ /react/app/public/
 COPY src/ /react/app/src/
 COPY package-lock.json package.json jsconfig.json /react/app/
-WORKDIR /react/app
 RUN npm ci --omit=dev --ignore-scripts
 
 # Args and build
@@ -17,13 +16,12 @@ ARG NODE_ENV="development"
 ENV REACT_APP_HDS_API_URL=${HDS_URL}
 ENV REACT_APP_HOSTED_URL=${FRONTEND_URL}
 ENV REACT_APP_NODE_ENV=${NODE_ENV}
-RUN echo "API URL: ${REACT_APP_HDS_API_URL}"
-RUN echo "HOSTED URL: ${REACT_APP_HOSTED_URL}"
-RUN echo "NODE ENV: ${REACT_APP_NODE_ENV}"
-RUN npm run build
+RUN echo "API URL: ${REACT_APP_HDS_API_URL}" && \
+    echo "HOSTED URL: ${REACT_APP_HOSTED_URL}" && \
+    echo "NODE ENV: ${REACT_APP_NODE_ENV}" && \
+    npm run build
 
-FROM node:16.16.0-slim
-RUN mkdir -p /opt/app/
+FROM node:16.16.0-slim as prodStage
 WORKDIR /opt/app/
 COPY server.js /opt/app/
 COPY entrypoint.sh /opt/app/entrypoint.sh
