--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -29,47 +29,47 @@ stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
 redirect_stderr=true
 stdout_logfile_maxbytes=0   ; max # logfile bytes b4 rotation (default 50MB)
 
-[program:report_sqs]
-command=/opt/app/scripts/start_s3_client.sh ERRORREPORTS 9104           ; the program (relative uses PATH, can take args)
+[program:sqs_client]
+command=/opt/app/scripts/start_sqs_client.sh          ; the program (relative uses PATH, can take args)
 user=root
 stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
 redirect_stderr=true
 stdout_logfile_maxbytes=0
 
-[program:sessclip_sqs]
-command=/opt/app/scripts/start_event_client.sh SESSCLIP 9105
-user=root
-stdout_logfile=/dev/stdout      
-redirect_stderr=true
-stdout_logfile_maxbytes=0
+# [program:sessclip_sqs]
+# command=/opt/app/scripts/start_event_client.sh SESSCLIP 9105
+# user=root
+# stdout_logfile=/dev/stdout      
+# redirect_stderr=true
+# stdout_logfile_maxbytes=0
 
-[program:file_sqs]
-command=/opt/app/scripts/start_event_client.sh S3FILES 9106
-user=root
-stdout_logfile=/dev/stdout      
-redirect_stderr=true
-stdout_logfile_maxbytes=0
+# [program:file_sqs]
+# command=/opt/app/scripts/start_event_client.sh S3FILES 9106
+# user=root
+# stdout_logfile=/dev/stdout      
+# redirect_stderr=true
+# stdout_logfile_maxbytes=0
 
-[program:versions_sqs]
-command=/opt/app/scripts/start_s3_client.sh HARVVERSION 9107           ; the program (relative uses PATH, can take args)
-user=root
-stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
-redirect_stderr=true
-stdout_logfile_maxbytes=0
+# [program:versions_sqs]
+# command=/opt/app/scripts/start_s3_client.sh HARVVERSION 9107           ; the program (relative uses PATH, can take args)
+# user=root
+# stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
+# redirect_stderr=true
+# stdout_logfile_maxbytes=0
 
-[program:jobresults_sqs]
-command=/opt/app/scripts/start_s3_client.sh JOBRESULTS 9108           ; the program (relative uses PATH, can take args)
-user=root
-stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
-redirect_stderr=true
-stdout_logfile_maxbytes=0
+# [program:jobresults_sqs]
+# command=/opt/app/scripts/start_s3_client.sh JOBRESULTS 9108           ; the program (relative uses PATH, can take args)
+# user=root
+# stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
+# redirect_stderr=true
+# stdout_logfile_maxbytes=0
 
-[program:autodiagnostics_sqs]
-command=/opt/app/scripts/start_s3_client.sh AUTODIAGNOSTICS 9109           ; the program (relative uses PATH, can take args)
-user=root
-stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
-redirect_stderr=true
-stdout_logfile_maxbytes=0
+# [program:autodiagnostics_sqs]
+# command=/opt/app/scripts/start_s3_client.sh AUTODIAGNOSTICS 9109           ; the program (relative uses PATH, can take args)
+# user=root
+# stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
+# redirect_stderr=true
+# stdout_logfile_maxbytes=0
 
 [program:celery]
 command=/opt/app/scripts/start-celery.sh  ; the program (relative uses PATH, can take args)
