--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.1",
     "msw": "^0.49.2",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "react-select-event": "^5.5.1"
   }
 }
