refactor docker compose and create CI makefile target
This reduces a whole lot of duplication, and makes it much easier to see the differences

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
 		always {
             script {
                 currentBuild.result = ((env.totalExitCode).toInteger() == 0) ? "SUCCESS" : "FAILURE"
-                sh "sudo docker compose down"
+                sh "sudo docker compose down --remove-orphans"
             }
 		}
 	}
