--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,61 +1,40 @@
 services:
   db:
-    image: postgres
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+    extends:
+      file: docker-compose.base.yml
+      service: db
     networks:
       - "hds-network"
+
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile.local
-    command: supervisord
+    extends:
+      file: docker-compose.base.yml
+      service: web
     volumes:
       - ./hds/:/opt/app/hds
-      - ./fixtures:/opt/app/fixtures
-    ports:
-      - 127.0.0.1:${HDS_PORT}:8000
     environment:
-      - POSTGRES_NAME=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - DEBUG=1
-      - SECRET_KEY=dummy_key
-      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-      - DJANGO_SUPERUSER_USERNAME=afttest
-      - DJANGO_SUPERUSER_email=aft@aft.aft
-      - DJANGO_SUPERUSER_PASSWORD=aft
-      - SQS_USER_PASSWORD=aft
-      - SQL_ENGINE=django_prometheus.db.backends.postgresql
-      - SQL_HOST=db
-      - SQL_PORT=5432
-      - HDS_ROOT=/opt/app/hds
-      - HDS_PORT=${HDS_PORT}
-      - JOB_SERVER_ADDRESS=${JOB_SERVER_ADDRESS}
-      - BROKER_URL=redis://redis:6379/0
-      - PAGE_CACHING=true
-      - GITHASH=${GITHASH:-"UNKNOWN"}
-      - MIGRATE=true
       - AWS_STORAGE_BUCKET_NAME=${AWS_STORAGE_BUCKET_NAME}
       - USES3=${USES3}
-    depends_on:
-      - db
-      - redis
+      - JOB_SERVER_ADDRESS=${JOB_SERVER_ADDRESS}
+      - GITHASH=${GITHASH:-"UNKNOWN"}
+    ports:
+      - 127.0.0.1:${HDS_PORT}:8000
     networks:
       - "hds-network"
+
+  redis:
+    extends:
+      file: docker-compose.base.yml
+      service: redis
+    networks:
+      - "hds-network"
+
   frontend:
     build:
      context: ./frontend
     command: ./entrypoint.sh
     ports:
       - 127.0.0.1:3000:3000
-    networks:
-      - "hds-network"
-  redis:
-    image: redis:6.2-alpine
-    restart: always
     networks:
       - "hds-network"
 
