--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ django-storages==1.13.1
 django-structlog[celery]==5.0.1
 rest-framework-roles==0.4.1
 flake8==4.0.1
+flask==2.1.3 # Must be pinned for locust to work properly
 gunicorn==20.1.0
 jsonschema==4.16.0
+locust==2.15.1
 mccabe==0.6.1
 prometheus-client==0.14.1
 psutil==5.9.1
