--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -31,6 +31,7 @@ services:
       - HDS_PORT=${HDS_PORT}
       - PAGE_CACHING=true
       - MIGRATE=true
+      - SILK_PROFILING=true
     volumes:
       - ./fixtures:/opt/app/fixtures
     depends_on:
