--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-filter==22.1
 django-redis==5.2.0
 django-simple-history==3.1.1
 django-taggit==3.0.0
+django-silk==5.0.3
 django-storages==1.13.1
 django-structlog[celery]==5.0.1
 rest-framework-roles==0.4.1
