[cleanup] Limit beatbox logs in cloudwath
This is a minor hack I suppose, but if beatbox is going to be running every minute and potentially executing hundreds of requests,
we probably don't want to log them all. We could potentiall write a more sophisticated logger that is more of a rate limiter, but I think
this will do the job fine for now. Failure codes and response are reported to slack anyway

--- a/docker-compose.beatbox.yml
+++ b/docker-compose.beatbox.yml
@@ -10,6 +10,8 @@ services:
     extends:
       file: docker-compose.yml
       service: web
+    environment:
+      - MIGRATE=true
     networks:
       - "hds-network"
 
@@ -28,6 +30,8 @@ services:
       - TEST_PASSWORD=testingpwd
       - TEST_HOSTNAME=http://web:8000
       - VERBOSE=true
+      - SLACK_TOKEN=${SLACK_TOKEN}
+      - SLACK_CHANNEL=hds-test
     ports:
       - 127.0.0.1:8080:8080
     networks:
