--- a/docker-compose.beatbox.yml
+++ b/docker-compose.beatbox.yml
@@ -33,6 +33,7 @@ services:
       - SLACK_TOKEN=${SLACK_TOKEN}
       - SLACK_CHANNEL=hds-test
       - RUN_ASYNC=true
+      - MIGRATE=false
     ports:
       - 127.0.0.1:8080:8080
     networks:
