--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,34 +5,34 @@
   "homepage": "",
   "dependencies": {
     "@microlink/react-json-view": "^1.22.2",
-    "@monaco-editor/react": "^4.4.6",
-    "@reduxjs/toolkit": "^1.8.3",
-    "@rjsf/core": "^5.0.0-beta.11",
-    "@rjsf/mui": "^5.0.0-beta.11",
-    "@rjsf/utils": "^5.0.0-beta.11",
-    "@rjsf/validator-ajv8": "^5.0.0-beta.11",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.0.0",
-    "@uiw/react-textarea-code-editor": "^2.0.3",
+    "@monaco-editor/react": "^4.5.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@rjsf/core": "^5.7.2",
+    "@rjsf/mui": "^5.7.2",
+    "@rjsf/utils": "^5.7.2",
+    "@rjsf/validator-ajv8": "^5.7.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@uiw/react-textarea-code-editor": "^2.1.1",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
-    "plotly.js": "^2.13.3",
+    "plotly.js": "^2.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loader-spinner": "^5.1.7-beta.1",
-    "react-player": "^2.11.0",
-    "react-plotly.js": "^2.5.1",
-    "react-redux": "^8.0.2",
-    "react-responsive": "^9.0.0-beta.10",
-    "react-router-dom": "^6.8.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-player": "^2.12.0",
+    "react-plotly.js": "^2.6.0",
+    "react-redux": "^8.0.5",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
-    "react-select": "^5.4.0",
-    "react-toastify": "^9.0.7",
+    "react-select": "^5.7.3",
+    "react-toastify": "^9.1.3",
     "react-virtuoso": "^3.1.5",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -58,9 +58,9 @@
   },
   "devDependencies": {
     "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-testing-library": "^5.9.1",
-    "husky": "^8.0.1",
-    "msw": "^0.49.2",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "husky": "^8.0.3",
+    "msw": "^0.49.3",
     "prettier": "2.7.1",
     "react-select-event": "^5.5.1"
   }
