--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@uiw/react-textarea-code-editor": "^2.1.1",
     "axios": "^0.27.2",
+    "danfojs": "^1.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
