[clean up] remove internally linked `deps` & rearrange requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,28 @@
-backports.zoneinfo==0.2.1
-urllib3==1.26
-werkzeug==2.1.2
+boto3==1.24.61
+celery==5.2.7
 Django==4.1
-django-prometheus==2.2.0
 djangorestframework==3.13.1
 django-cors-headers==3.13.0
+django-celery-beat==2.4.0
+django-celery-results==2.4.0
 django-filter==22.1
+django-prometheus==2.2.0
 django-redis==5.2.0
 django-simple-history==3.1.1
 django-taggit==3.0.0
 django-silk==5.0.3
 django-storages==1.13.1
 django-structlog[celery]==5.0.1
-rest-framework-roles==0.4.1
 flask==2.1.3 # Must be pinned for locust to work properly
 gunicorn==20.1.0
 jsonschema==4.16.0
 locust==2.15.1
-mccabe==0.6.1
-prometheus-client==0.14.1
-psutil==5.9.1
-psycopg2-binary==2.9.3
-pycodestyle==2.8.0
-pyflakes==2.4.0
-pytz==2022.1
-sqlparse==0.4.2
-psutil==5.9.1
-pyyaml==6.0.0
-uritemplate==4.1.1
-celery==5.2.7
-django-celery-beat==2.4.0
-django-celery-results==2.4.0
-redis==4.3.4
-slack_sdk==3.18.1
-boto3==1.24.61
 moto==4.0.1
 moviepy==1.0.3
+prometheus-client==0.14.1
+psycopg2-binary==2.9.3
+pytz==2022.1
+redis==4.3.4
+rest-framework-roles==0.4.1
+slack-sdk==3.18.1
+uritemplate==4.1.1
