--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -20,7 +20,8 @@ RUN apt update && apt install -y\
 
 # Install pip packages
 COPY requirements.txt /opt/app/
-RUN pip install -r requirements.txt --no-cache-dir
+RUN pip install pip --upgrade && \
+    pip install -r requirements.txt --no-cache-dir
 
 # Copy source, scripts and configs
 COPY scripts/ /opt/app/scripts/
