--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ flask==3.0.1 # Must be pinned for locust to work properly
 gunicorn==21.2.0
 jsonschema==4.21.1
 locust==2.21.0
+matplotlib==3.7.4
 moto==5.0.0
 moviepy==1.0.3
 prometheus-client==0.19.0
@@ -24,5 +25,7 @@ psycopg2-binary==2.9.9
 pytz==2023.4
 redis==5.0.1
 rest-framework-roles==0.4.1
+scikit-learn==1.3.2
+scipy==1.10.1
 slack-sdk==3.26.2
 uritemplate==4.1.1
