--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -25,7 +25,7 @@ RUN pip install pip --upgrade && \
 
 # Copy source, scripts and configs
 COPY scripts/ /opt/app/scripts/
-COPY supervisor/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY supervisor/supervisord.local.conf /etc/supervisor/conf.d/supervisord.conf
 COPY hds /opt/app/hds/
 
 RUN chown -R www-data:www-data /opt/app
