--- a/supervisor/supervisord.local.conf
+++ b/supervisor/supervisord.local.conf
@@ -2,8 +2,8 @@
 ; Defines necessary configs for running HDS and other programs with supervisord
 ; Redirect program logs to stdout
 
-[unix_http_server]
-file=/tmp/supervisor.sock   ; the path to the socket file
+[inet_http_server]
+port=127.0.0.1:9050
 
 [supervisord]
 logfile=/var/log/supervisor/supervisord.log ; main log file; default $CWD/supervisord.log
