[refactor] beat as separate process

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -43,6 +43,13 @@ stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
 redirect_stderr=true
 stdout_logfile_maxbytes=0   ; max # logfile bytes b4 rotation (default 50MB)
 
+[program:beat]
+command=/opt/app/scripts/start-beat.sh  ; the program (relative uses PATH, can take args)
+user=root
+stdout_logfile=/dev/stdout      ; stdout log path, NONE for none; default AUTO
+redirect_stderr=true
+stdout_logfile_maxbytes=0   ; max # logfile bytes b4 rotation (default 50MB)
+
 [program:monitor]
 command=/opt/app/monitor/entrypoint.sh  ; the program (relative uses PATH, can take args)
 user=root
