--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ locust==2.21.0
 matplotlib==3.7.4
 moto==5.0.0
 moviepy==1.0.3
+piexif==1.1.3
+Pillow==10.0.0
 prometheus-client==0.19.0
 psycopg2-binary==2.9.9
 pytz==2023.4
